# 4.Huffman

./: .gitignore  CMakeLists.txt  README.md  cmd_helper.cpp  cmd_helper.h  data_manager.cpp  data_manager.h  file_manager.cpp  huffman_data.h  huffman_tree.cpp  huffman_tree.h  main.cpp  min_heap.h  tree_node.cpp  tree_node.h
src/: cmd_helper.cpp  cmd_helper.h  data_manager.cpp  file_manager.cpp  file_manager.h  huffman_tree.cpp  huffman_tree.h  main.cpp  min_heap.cpp  min_heap.h
test/: data_manager_test.cpp  file_manager_test.cpp  huffman_tree_test.cpp  min_heap_test.cpp
